tests/positive/pr118e_not_null_self_reference.safe
-- Test: pr118e_not_null_self_reference
-- Description: `not null` is accepted on direct self-recursive inferred references.
-- Expected: ACCEPT

package pr118e_not_null_self_reference

   type node is record
      next : not null node
